--- a/PyCitySchools/PyCitySchools_starter.ipynb
+++ b/PyCitySchools/PyCitySchools_starter.ipynb
@@ -184,20 +184,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "Cannot access callable attribute 'loc' of 'DataFrameGroupBy' objects, try using the 'apply' method",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-138-3d4477dffb77>, line 33)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-112-4ab731d0264f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[1;31m# filter for math scores 70 or greater\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 14\u001b[1;33m \u001b[0mschool_passing_math\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mgrouped_school_df\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mgrouped_school_df\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"math_score\"\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m>=\u001b[0m \u001b[1;36m70\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcount\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"Student ID\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     15\u001b[0m \u001b[0mschool_pct_pass_math\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mschool_passing_math\u001b[0m \u001b[1;33m/\u001b[0m \u001b[0mfloat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mschool_student_count\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m*\u001b[0m\u001b[1;36m100\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\core\\groupby\\groupby.py\u001b[0m in \u001b[0;36m__getattr__\u001b[1;34m(self, attr)\u001b[0m\n\u001b[0;32m    561\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mattr\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    562\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mhasattr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mobj\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mattr\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 563\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_make_wrapper\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mattr\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    564\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    565\u001b[0m         raise AttributeError(\n",
-      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\core\\groupby\\groupby.py\u001b[0m in \u001b[0;36m_make_wrapper\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m    602\u001b[0m                 \u001b[1;34m\"using the 'apply' method\"\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkind\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__name__\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    603\u001b[0m             )\n\u001b[1;32m--> 604\u001b[1;33m             \u001b[1;32mraise\u001b[0m \u001b[0mAttributeError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmsg\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    605\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    606\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_set_group_selection\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: Cannot access callable attribute 'loc' of 'DataFrameGroupBy' objects, try using the 'apply' method"
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-138-3d4477dffb77>\"\u001b[1;36m, line \u001b[1;32m33\u001b[0m\n\u001b[1;33m    \"% Passing Math\": school_passing_math\u001b[0m\n\u001b[1;37m                   ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -215,30 +210,26 @@
     "school_avg_reading = grouped_school_df[\"reading_score\"].mean()\n",
     "\n",
     "# filter for math scores 70 or greater\n",
-    "school_passing_math = grouped_school_df.loc[grouped_school_df[\"math_score\"] >= 70].count()[\"Student ID\"]\n",
-    "school_pct_pass_math = school_passing_math / float(school_student_count)*100\n",
+    "school_passing_math = school_data_complete[school_data_complete[\"math_score\"] >= 70]\n",
+    "# school_pct_pass_math = school_passing_math / float[school_student_count] * 100\n",
     "\n",
     "# filter for reading scores 70 or greater\n",
-    "# passing_reading = school_data_complete.loc[school_data_complete[\"reading_score\"] >= 70].count()[\"Student ID\"]\n",
-    "# pct_passing_reading = passing_reading / float(student_sum)*100\n",
+    "# passing_reading = school_data_complete[school_data_complete[\"reading_score\"] >= 70]\n",
+    "# pct_passing_reading = passing_reading / float[student_sum]*100\n",
     "\n",
     "# filter for math AND reading scores 70 or greater\n",
     "# passing_overall = len(school_data_complete.loc[(school_data_complete[\"reading_score\"] >= 70) & (school_data_complete[\"math_score\"] >= 70)])/student_sum*100\n",
     "\n",
-    "\n",
-    "\n",
-    "# school_pct_pass_math = \n",
-    "# school_pct_pass_reading = \n",
     "# school_passing_overall = \n",
     "\n",
-    "# # # Create overview table to summarize all the metrics\n",
+    "# Create overview table to summarize all the metrics\n",
     "school_summary_df = pd.DataFrame({\"School Type\": school_type,\n",
     "                                  \"Total Students\": school_student_count,\n",
     "                                  \"Total School Budget\": school_budget,\n",
     "                                  \"Per Student Budget\": per_student_budget,\n",
     "                                  \"Average Math Score\": school_avg_math,\n",
-    "                                  \"Average Reading Score\": school_avg_reading,\n",
-    "                                  \"% Passing Math\": school_pct_pass_math\n",
+    "                                  \"Average Reading Score\": school_avg_reading\n",
+    "                                  \"% Passing Math\": school_passing_math\n",
     "#                                    \"% Passing Reading\": [school_pct_pass_reading],\n",
     "#                                    \"% Passing Overall\": [school_passing_overall]\n",
     "                        })\n",
@@ -268,7 +259,10 @@
     "scrolled": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "Top_schools_df = school_summary_df.sort_values(\"% Passing Overall\", ascending=False)\n",
+    "Top_schools_df.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -289,7 +283,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Bottom_schools_df = school_summary_df.sort_values(\"% Passing Overall\", ascending=True)\n",
+    "Bottom_schools_df.head()"
+   ]
   },
   {
    "cell_type": "markdown",
