--- a/PyCitySchools/PyCitySchools_starter.ipynb
+++ b/PyCitySchools/PyCitySchools_starter.ipynb
@@ -914,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -938,225 +938,174 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Student ID</th>\n",
-       "      <th>student_name</th>\n",
-       "      <th>gender</th>\n",
-       "      <th>grade</th>\n",
+       "      <th>9th</th>\n",
+       "      <th>10th</th>\n",
+       "      <th>11th</th>\n",
+       "      <th>12th</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>school_name</th>\n",
-       "      <th>reading_score</th>\n",
-       "      <th>math_score</th>\n",
-       "      <th>School ID</th>\n",
-       "      <th>type</th>\n",
-       "      <th>size</th>\n",
-       "      <th>budget</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Paul Bradley</td>\n",
-       "      <td>M</td>\n",
-       "      <td>9th</td>\n",
+       "      <td>Bailey High School</td>\n",
+       "      <td>77.083676</td>\n",
+       "      <td>76.996772</td>\n",
+       "      <td>77.515588</td>\n",
+       "      <td>76.492218</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Cabrera High School</td>\n",
+       "      <td>83.094697</td>\n",
+       "      <td>83.154506</td>\n",
+       "      <td>82.765560</td>\n",
+       "      <td>83.277487</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Figueroa High School</td>\n",
+       "      <td>76.403037</td>\n",
+       "      <td>76.539974</td>\n",
+       "      <td>76.884344</td>\n",
+       "      <td>77.151369</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Ford High School</td>\n",
+       "      <td>77.361345</td>\n",
+       "      <td>77.672316</td>\n",
+       "      <td>76.918058</td>\n",
+       "      <td>76.179963</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Griffin High School</td>\n",
+       "      <td>82.044010</td>\n",
+       "      <td>84.229064</td>\n",
+       "      <td>83.842105</td>\n",
+       "      <td>83.356164</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Hernandez High School</td>\n",
+       "      <td>77.438495</td>\n",
+       "      <td>77.337408</td>\n",
+       "      <td>77.136029</td>\n",
+       "      <td>77.186567</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Holden High School</td>\n",
+       "      <td>83.787402</td>\n",
+       "      <td>83.429825</td>\n",
+       "      <td>85.000000</td>\n",
+       "      <td>82.855422</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <td>Huang High School</td>\n",
-       "      <td>66</td>\n",
-       "      <td>79</td>\n",
-       "      <td>0</td>\n",
-       "      <td>District</td>\n",
-       "      <td>2917</td>\n",
-       "      <td>1910635</td>\n",
+       "      <td>77.027251</td>\n",
+       "      <td>75.908735</td>\n",
+       "      <td>76.446602</td>\n",
+       "      <td>77.225641</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Bonnie Ray</td>\n",
-       "      <td>F</td>\n",
-       "      <td>9th</td>\n",
-       "      <td>Huang High School</td>\n",
-       "      <td>97</td>\n",
-       "      <td>84</td>\n",
-       "      <td>0</td>\n",
-       "      <td>District</td>\n",
-       "      <td>2917</td>\n",
-       "      <td>1910635</td>\n",
+       "      <td>Johnson High School</td>\n",
+       "      <td>77.187857</td>\n",
+       "      <td>76.691117</td>\n",
+       "      <td>77.491653</td>\n",
+       "      <td>76.863248</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Bryan Miranda</td>\n",
-       "      <td>M</td>\n",
-       "      <td>9th</td>\n",
-       "      <td>Huang High School</td>\n",
-       "      <td>94</td>\n",
-       "      <td>94</td>\n",
-       "      <td>0</td>\n",
-       "      <td>District</td>\n",
-       "      <td>2917</td>\n",
-       "      <td>1910635</td>\n",
+       "      <td>Pena High School</td>\n",
+       "      <td>83.625455</td>\n",
+       "      <td>83.372000</td>\n",
+       "      <td>84.328125</td>\n",
+       "      <td>84.121547</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>12</td>\n",
-       "      <td>12</td>\n",
-       "      <td>Brittney Walker</td>\n",
-       "      <td>F</td>\n",
-       "      <td>9th</td>\n",
-       "      <td>Huang High School</td>\n",
-       "      <td>64</td>\n",
-       "      <td>79</td>\n",
-       "      <td>0</td>\n",
-       "      <td>District</td>\n",
-       "      <td>2917</td>\n",
-       "      <td>1910635</td>\n",
+       "      <td>Rodriguez High School</td>\n",
+       "      <td>76.859966</td>\n",
+       "      <td>76.612500</td>\n",
+       "      <td>76.395626</td>\n",
+       "      <td>77.690748</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>13</td>\n",
-       "      <td>13</td>\n",
-       "      <td>William Long</td>\n",
-       "      <td>M</td>\n",
-       "      <td>9th</td>\n",
-       "      <td>Huang High School</td>\n",
-       "      <td>71</td>\n",
-       "      <td>79</td>\n",
-       "      <td>0</td>\n",
-       "      <td>District</td>\n",
-       "      <td>2917</td>\n",
-       "      <td>1910635</td>\n",
+       "      <td>Shelton High School</td>\n",
+       "      <td>83.420755</td>\n",
+       "      <td>82.917411</td>\n",
+       "      <td>83.383495</td>\n",
+       "      <td>83.778976</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>39152</td>\n",
-       "      <td>39152</td>\n",
-       "      <td>Lori Moore</td>\n",
-       "      <td>F</td>\n",
-       "      <td>9th</td>\n",
        "      <td>Thomas High School</td>\n",
-       "      <td>98</td>\n",
-       "      <td>84</td>\n",
-       "      <td>14</td>\n",
-       "      <td>Charter</td>\n",
-       "      <td>1635</td>\n",
-       "      <td>1043130</td>\n",
+       "      <td>83.590022</td>\n",
+       "      <td>83.087886</td>\n",
+       "      <td>83.498795</td>\n",
+       "      <td>83.497041</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>39153</td>\n",
-       "      <td>39153</td>\n",
-       "      <td>William Hubbard</td>\n",
-       "      <td>M</td>\n",
-       "      <td>9th</td>\n",
-       "      <td>Thomas High School</td>\n",
-       "      <td>80</td>\n",
-       "      <td>75</td>\n",
-       "      <td>14</td>\n",
-       "      <td>Charter</td>\n",
-       "      <td>1635</td>\n",
-       "      <td>1043130</td>\n",
+       "      <td>Wilson High School</td>\n",
+       "      <td>83.085578</td>\n",
+       "      <td>83.724422</td>\n",
+       "      <td>83.195326</td>\n",
+       "      <td>83.035794</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>39157</td>\n",
-       "      <td>39157</td>\n",
-       "      <td>Kristen Gonzalez</td>\n",
-       "      <td>F</td>\n",
-       "      <td>9th</td>\n",
-       "      <td>Thomas High School</td>\n",
-       "      <td>79</td>\n",
-       "      <td>94</td>\n",
-       "      <td>14</td>\n",
-       "      <td>Charter</td>\n",
-       "      <td>1635</td>\n",
-       "      <td>1043130</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>39164</td>\n",
-       "      <td>39164</td>\n",
-       "      <td>Joseph Anthony</td>\n",
-       "      <td>M</td>\n",
-       "      <td>9th</td>\n",
-       "      <td>Thomas High School</td>\n",
-       "      <td>97</td>\n",
-       "      <td>76</td>\n",
-       "      <td>14</td>\n",
-       "      <td>Charter</td>\n",
-       "      <td>1635</td>\n",
-       "      <td>1043130</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>39167</td>\n",
-       "      <td>39167</td>\n",
-       "      <td>Rebecca Tanner</td>\n",
-       "      <td>F</td>\n",
-       "      <td>9th</td>\n",
-       "      <td>Thomas High School</td>\n",
-       "      <td>73</td>\n",
-       "      <td>84</td>\n",
-       "      <td>14</td>\n",
-       "      <td>Charter</td>\n",
-       "      <td>1635</td>\n",
-       "      <td>1043130</td>\n",
+       "      <td>Wright High School</td>\n",
+       "      <td>83.264706</td>\n",
+       "      <td>84.010288</td>\n",
+       "      <td>83.836782</td>\n",
+       "      <td>83.644986</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>11408 rows × 11 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       Student ID      student_name gender grade         school_name  \\\n",
-       "0               0      Paul Bradley      M   9th   Huang High School   \n",
-       "4               4        Bonnie Ray      F   9th   Huang High School   \n",
-       "5               5     Bryan Miranda      M   9th   Huang High School   \n",
-       "12             12   Brittney Walker      F   9th   Huang High School   \n",
-       "13             13      William Long      M   9th   Huang High School   \n",
-       "...           ...               ...    ...   ...                 ...   \n",
-       "39152       39152        Lori Moore      F   9th  Thomas High School   \n",
-       "39153       39153   William Hubbard      M   9th  Thomas High School   \n",
-       "39157       39157  Kristen Gonzalez      F   9th  Thomas High School   \n",
-       "39164       39164    Joseph Anthony      M   9th  Thomas High School   \n",
-       "39167       39167    Rebecca Tanner      F   9th  Thomas High School   \n",
-       "\n",
-       "       reading_score  math_score  School ID      type  size   budget  \n",
-       "0                 66          79          0  District  2917  1910635  \n",
-       "4                 97          84          0  District  2917  1910635  \n",
-       "5                 94          94          0  District  2917  1910635  \n",
-       "12                64          79          0  District  2917  1910635  \n",
-       "13                71          79          0  District  2917  1910635  \n",
-       "...              ...         ...        ...       ...   ...      ...  \n",
-       "39152             98          84         14   Charter  1635  1043130  \n",
-       "39153             80          75         14   Charter  1635  1043130  \n",
-       "39157             79          94         14   Charter  1635  1043130  \n",
-       "39164             97          76         14   Charter  1635  1043130  \n",
-       "39167             73          84         14   Charter  1635  1043130  \n",
-       "\n",
-       "[11408 rows x 11 columns]"
+       "                             9th       10th       11th       12th\n",
+       "school_name                                                      \n",
+       "Bailey High School     77.083676  76.996772  77.515588  76.492218\n",
+       "Cabrera High School    83.094697  83.154506  82.765560  83.277487\n",
+       "Figueroa High School   76.403037  76.539974  76.884344  77.151369\n",
+       "Ford High School       77.361345  77.672316  76.918058  76.179963\n",
+       "Griffin High School    82.044010  84.229064  83.842105  83.356164\n",
+       "Hernandez High School  77.438495  77.337408  77.136029  77.186567\n",
+       "Holden High School     83.787402  83.429825  85.000000  82.855422\n",
+       "Huang High School      77.027251  75.908735  76.446602  77.225641\n",
+       "Johnson High School    77.187857  76.691117  77.491653  76.863248\n",
+       "Pena High School       83.625455  83.372000  84.328125  84.121547\n",
+       "Rodriguez High School  76.859966  76.612500  76.395626  77.690748\n",
+       "Shelton High School    83.420755  82.917411  83.383495  83.778976\n",
+       "Thomas High School     83.590022  83.087886  83.498795  83.497041\n",
+       "Wilson High School     83.085578  83.724422  83.195326  83.035794\n",
+       "Wright High School     83.264706  84.010288  83.836782  83.644986"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# groupby school name, create a df with math average math score (9,10,11,12) as columns\n",
-    "\n",
-    "math_by_grade_df = school_data_complete[(school_data_complete[\"grade\"]==\"9th\")]\n",
-    "math_by_grade_df\n",
+    "# groupby school name, create a df with average math score (9,10,11,12) as columns\n",
+    "math_grade9_df = school_data_complete[(school_data_complete[\"grade\"]==\"9th\")]\n",
+    "math_grade10_df = school_data_complete[(school_data_complete[\"grade\"]==\"10th\")]\n",
+    "math_grade11_df = school_data_complete[(school_data_complete[\"grade\"]==\"11th\")]\n",
+    "math_grade12_df = school_data_complete[(school_data_complete[\"grade\"]==\"12th\")]\n",
     "\n",
     "# groupby (\"school name\") w/ .mean()\n",
-    "# grouped_math_grade_df = math_by_grade_df.groupby(\"school_name\").mean()\n",
-    "# grouped_math_grade_df\n",
+    "grouped_math_grade9_df = math_grade9_df.groupby(\"school_name\").mean()\n",
+    "grouped_math_grade10_df = math_grade10_df.groupby(\"school_name\").mean()\n",
+    "grouped_math_grade11_df = math_grade11_df.groupby(\"school_name\").mean()\n",
+    "grouped_math_grade12_df = math_grade12_df.groupby(\"school_name\").mean()\n",
     "\n",
-    "# pull out just the math_score column"
+    "# create final df with columns (9,10,11,12)\n",
+    "math_by_grade_df = pd.DataFrame({\"9th\": grouped_math_grade9_df[\"math_score\"],\n",
+    "                                \"10th\": grouped_math_grade10_df[\"math_score\"],\n",
+    "                                \"11th\": grouped_math_grade11_df[\"math_score\"],\n",
+    "                                \"12th\": grouped_math_grade12_df[\"math_score\"]\n",
+    "                                })\n",
+    "math_by_grade_df"
    ]
   },
   {
